5656.	[bug]		Ensure that large responses work correctly over
			DoH, and that zone transfer requests over DoH are
			explicitly rejected. [GL !5148]

5655.	[bug]		Signed, insecure delegation responses prepared by named
			either lacked the necessary NSEC records or contained
			duplicate NSEC records when both wildcard expansion and
			CNAME chaining were required to prepare the response.
			This has been fixed. [GL #2759]

5654.	[func]		Windows support has been removed. [GL #2690]

5653.	[bug]		Fixed a bug that caused the NSEC3 salt to be changed
			for KASP zones on restart.
			[GL #2725]

5652.	[bug]		Copy and paste error caused the socket option to
			be enabled instead of disabled. [GL #2746]

5651.	[func]		Refactor zone dumping to be processed asynchronously
			via the uv_work_t thread pool API. [GL #2732]

5650.	[bug]		Prevent a crash that could occur if serve-stale
			was enabled and a prefetch was triggered during a
			query restart. [GL #2733]

5649.	[bug]		If a query was answered with stale data on a server
			with DNS64 enabled, an assertion could occur if a
			non-stale answer arrived afterward. [GL #2731]

5648.	[bug]		The calculation of the estimated IXFR transaction
			size by dns_journal_iter_init() was invalid. [GL #2685]

5647.	[func]		The interfacemgr has been refactored to use fewer
			clientmgr objects, which in turn use fewer memory
			contexts and tasks.  This should result in less
			fragmented memory and better startup performance.
			[GL #2433]

5646.	[bug]		The default TCP timeout for rndc has been increased
			to 60 seconds. This was its original value, but it
			had been inadvertently lowered to 10. [GL #2643]

5645.	[cleanup]	Remove the rarely-used dns_name_copy() function
			and rename dns_name_copynf() to dns_name_copy().
			[GL !5081]

5644.	[bug]		Fix a race condition in reading and writing key files
			for KASP zones in multiple views. [GL #1875]

5643.	[placeholder]
