@@ -510,6 +510,7 @@ SERVER
   	request-expire boolean;
   	request-ixfr boolean;
   	request-nsid boolean;
+  	require-cookie boolean;
   	send-cookie boolean;
   	tcp-keepalive boolean;
   	tcp-only boolean;
@@ -813,6 +814,7 @@ VIEW
   		request-expire boolean;
   		request-ixfr boolean;
   		request-nsid boolean;
+  		require-cookie boolean;
   		send-cookie boolean;
   		tcp-keepalive boolean;
   		tcp-only boolean;
