@@ -421,6 +421,7 @@ server <netprefix> {
         request-expire <boolean>;
         request-ixfr <boolean>;
         request-nsid <boolean>;
+        require-cookie <boolean>;
         send-cookie <boolean>;
         tcp-keepalive <boolean>;
         tcp-only <boolean>;
@@ -698,6 +699,7 @@ view <string> [ <class> ] {
                 request-expire <boolean>;
                 request-ixfr <boolean>;
                 request-nsid <boolean>;
+                require-cookie <boolean>;
                 send-cookie <boolean>;
                 tcp-keepalive <boolean>;
                 tcp-only <boolean>;
