@@ -418,6 +418,7 @@ server <netprefix> {
         request-expire <boolean>;
         request-ixfr <boolean>;
         request-nsid <boolean>;
+        require-cookie <boolean>;
         send-cookie <boolean>;
         tcp-keepalive <boolean>;
         tcp-only <boolean>;
@@ -694,6 +695,7 @@ view <string> [ <class> ] {
                 request-expire <boolean>;
                 request-ixfr <boolean>;
                 request-nsid <boolean>;
+                require-cookie <boolean>;
                 send-cookie <boolean>;
                 tcp-keepalive <boolean>;
                 tcp-only <boolean>;
