@@ -36,6 +36,12 @@ New Features
 - Run zone dumping tasks on separate asynchronous thread pools.  This change
   makes zone dumping no longer block networking I/O. :gl:`#2732`
 
+- A new configuration option ``require-cookie`` has been introduced, it
+  specifies if there should be a DNS COOKIE in the response for a given
+  prefix and if not named falls back to TCP.  This is useful if you know
+  a given server support DNS COOKIE.  It can also be used to force all
+  non DNS COOKIE responses to fall back to TCP.  [GL #2295]
+
 Removed Features
 ~~~~~~~~~~~~~~~~
 
