@@ -54,6 +54,7 @@ struct dns_peer {
 	bool support_edns;
 	bool request_nsid;
 	bool send_cookie;
+	bool require_cookie;
 	bool request_expire;
 	bool force_tcp;
 	bool tcp_keepalive;
@@ -96,6 +97,7 @@ struct dns_peer {
 #define FORCE_TCP_BIT		   15
 #define SERVER_PADDING_BIT	   16
 #define REQUEST_TCP_KEEPALIVE_BIT  17
+#define REQUIRE_COOKIE_BIT	   18
 
 static void
 peerlist_delete(dns_peerlist_t **list);
@@ -503,6 +505,33 @@ dns_peer_getsendcookie(dns_peer_t *peer, bool *retval) {
 
 	if (DNS_BIT_CHECK(SEND_COOKIE_BIT, &peer->bitflags)) {
 		*retval = peer->send_cookie;
+		return (ISC_R_SUCCESS);
+	} else {
+		return (ISC_R_NOTFOUND);
+	}
+}
+
+isc_result_t
+dns_peer_setrequirecookie(dns_peer_t *peer, bool newval) {
+	bool existed;
+
+	REQUIRE(DNS_PEER_VALID(peer));
+
+	existed = DNS_BIT_CHECK(REQUIRE_COOKIE_BIT, &peer->bitflags);
+
+	peer->require_cookie = newval;
+	DNS_BIT_SET(REQUIRE_COOKIE_BIT, &peer->bitflags);
+
+	return (existed ? ISC_R_EXISTS : ISC_R_SUCCESS);
+}
+
+isc_result_t
+dns_peer_getrequirecookie(dns_peer_t *peer, bool *retval) {
+	REQUIRE(DNS_PEER_VALID(peer));
+	REQUIRE(retval != NULL);
+
+	if (DNS_BIT_CHECK(REQUIRE_COOKIE_BIT, &peer->bitflags)) {
+		*retval = peer->require_cookie;
 		return (ISC_R_SUCCESS);
 	} else {
 		return (ISC_R_NOTFOUND);
