@@ -7876,6 +7876,35 @@ resquery_response(isc_task_t *task, isc_event_t *event) {
 			rctx.resend = true;
 			rctx_done(&rctx, result);
 			return;
+		} else if (fctx->res->view->peers != NULL) {
+			dns_peer_t *peer = NULL;
+			isc_netaddr_t netaddr;
+			isc_netaddr_fromsockaddr(&netaddr,
+						 &query->addrinfo->sockaddr);
+			result = dns_peerlist_peerbyaddr(fctx->res->view->peers,
+							 &netaddr, &peer);
+			if (result == ISC_R_SUCCESS) {
+				bool required = false;
+				result = dns_peer_getrequirecookie(peer,
+								   &required);
+				if (result == ISC_R_SUCCESS && required) {
+					char addrbuf[ISC_SOCKADDR_FORMATSIZE];
+					isc_sockaddr_format(
+						&query->addrinfo->sockaddr,
+						addrbuf, sizeof(addrbuf));
+					isc_log_write(dns_lctx,
+						      DNS_LOGCATEGORY_RESOLVER,
+						      DNS_LOGMODULE_RESOLVER,
+						      ISC_LOG_INFO,
+						      "missing required cookie "
+						      "from %s",
+						      addrbuf);
+					rctx.retryopts |= DNS_FETCHOPT_TCP;
+					rctx.resend = true;
+					rctx_done(&rctx, result);
+					return;
+				}
+			}
 		}
 		/*
 		 * XXXMPA When support for DNS COOKIE becomes ubiquitous, fall
