@@ -1,3 +1,8 @@
+5657.	[func]		You can now specify if a server must return a DNS
+			COOKIE before accepting the response. [GL #2295]
+
+			server <prefix> { require-cookie <yes_or_no>; };
+
 5656.	[bug]		Ensure that large responses work correctly over
 			DoH, and that zone transfer requests over DoH are
 			explicitly rejected. [GL !5148]
